Ändrat från arraylist till arraydeque i redo och undo metoderna